packages/babylon/test/fixtures/esprima/invalid-syntax/.migrated_0137/actual.js
var source = '\u203F = 10';
